# neural-builder

./: .gitignore  README.md  docker-compose.yml  package-lock.json
c++-framework/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
c++-framework/Doc/: DL UML.drawio  notes.txt  test plans.txt
c++-framework/Include/: NeuralNetwork.h
c++-framework/Include/Api/: Middleware.h  RouteHandlers.h
c++-framework/Include/Essential Functions/: Initializer.h  MathUtils.h  ModelEvaluator.h  Regularization.h
c++-framework/Include/Essential Functions/Activation Factory/: ActivationFactory.h
c++-framework/Include/Essential Functions/Loss Factory/: LossFactory.h
c++-framework/Include/Layer Types/: ConvolutionalLayer.h  DenseLayer.h  Layer.h
c++-framework/Include/Util Functions/: DatasetLoader.h  HyperParameterSearch.h  MatrixOperations.h
c++-framework/Src/: NeuralNetwork.cpp  test.cpp
c++-framework/Src/Api/: RouteHandlers.cpp
c++-framework/Src/Essential Functions/: Initializer.cpp  ModelEvaluator.cpp  Regularization.cpp
c++-framework/Src/Essential Functions/Activation Factory/: ActivationFactory.cpp
c++-framework/Src/Essential Functions/Loss Factory/: LossFactory.cpp
c++-framework/Src/Essential Functions/Math Utils/: DotProduct.cpp  ElementWiseOperations.cpp  Transpose.cpp
c++-framework/Src/Layer Types/: DenseLayer.cpp
c++-framework/Src/Util Functions/: DatasetLoader.cpp  HyperParameterSearch.cpp  MatrixOperations.cpp
c++-framework/dataset/mnist/test/: mnist_labels_test.csv
c++-framework/dataset/mnist/train/: mnist_labels_train.csv
(+55 files in other folders)
